# py-mcp-playwright

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  CLAUDE.md  Dockerfile  Makefile  README.md  conftest.py  docker-compose.yml  playwright.config.py  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: settings.local.json
.claude/agents/: playwright-api-explorer.md  playwright-api-test-creator.md  playwright-test-generator.md
.github/: labeler.yml
.github/workflows/: ci.yml  pr.yml  release.yml  security.yml
docs/: agent_usage.md  docker_usage.md  github_actions.md
examples/: example_api_usage.py  example_ui_usage.py
scripts/: docker-tests.sh  quick-test.sh  run-tests.sh  setup.sh  test-workflows.sh
src/: __init__.py  config.py  test_helpers.py
tests/api/: test_jsonplaceholder_api.py
tests/integration/: test_api_test_creator_demo.py
tests/ui/: test_example_website.py
utils/: test_runners.py
